
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2017-04-08 niel
	Chg: Use '--prefer-dist' for stable branches,  '--prefer-source' otherwise. Part of the move
		to not using the repo in production.
2017-04-07 niel
	Mrg: PR 2428, from Wally73 - Update simple.sh. Cleaning out discontinued code.
	Mrg: PR 2429, from Wally73 - Update simple-expanded.sh. Cleaning out NNTP Proxy references.
	Mrg: PR 2430, from Wally73 - Update threaded.sh. Cleaning out python references.
2017-04-06 niel
	Chg: Remove python module check in tmux/run.php
2017-04-06 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.1.1


2017-04-06 niel
	Chg: Remove NNTPProxy checks from .tmux's run.php
	Fix: Added missing field (collection_regexes_id) to multigroup_collections table definition.
2017-04-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.1.0


2017-04-03 niel
	Chg: Remove git repository checks from Tmux scripts. This is an effort to remove the use of the
		repository from user code. Dev code will still use it for some tasks (e.g. apply tags for
		releases).
2017-03-30 b3rs3rk
	Fix: Gamma PC Games view doesn't display grouped by gamesinfo_id
2017-03-30 DariusIII
	Chg: Further improve mediainfo uniqueid matching
2017-03-29 DariusIII
	Chg: Increase release size floor values to -10/10 in NameFixer class uidCheck function for
		better mediainfo matching.
2017-03-25 niel
	Fix: Update import predb daily batch script to handle changed layout on github. Also adds the
		date of the file to successful download message.
2017-03-20 niel
	Chg: Copied asset-installer setting to config section of composer.json in preparation for
		updating it.
	Chg: Update fxp/composer-asset-plugin to v1.3.0