@@ -8,6 +8,8 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
+2017-04-13 DariusIII
+	Chg: Properly categorize ANiHLS and HAiKU releases as TV > Anime (please run 'php misc/testing/Release/recategorize.php all' to recategorize releases)
 2017-04-08 niel
 	Chg: Use '--prefer-dist' for stable branches,  '--prefer-source' otherwise. Part of the move
 		to not using the repo in production.
